--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -34,5 +34,5 @@
 </table>
 <button type="button" class="btn btn-outline-danger btn-sm" (click)="makePdf()">Export to PDF</button>
 &nbsp;
-<button type="button" class="btn btn-outline-success btn-sm" (click)="makeExcel()">Export to Excel</button>
+<button type="button" class="btn btn-outline-success btn-sm" (click)="exportAsXLSX()">Export to Excel</button>
 </div>
